# wayfarer-daw

./: CMakeLists.txt  LICENSE  README.md  imgui.ini
lib/: portaudio_x64.lib
src/: argparse.cpp  argparse.h  audio_track.cpp  audio_track.h  bus.cpp  bus.h  controller.cpp  controller.h  envelope.cpp  envelope.h  error.h  generators.cpp  generators.h  global_config.cpp  global_config.h  instrument.cpp  instrument.h  main.cpp  midi.cpp  midi.h  oscillators.cpp  oscillators.h  pa_dev.cpp  sequence.cpp  sequence.h
src/effects/: filters.cpp  filters.h
src/gui/: bus_track_view.h  bust_track_view.cpp  gui.cpp  gui.h
src/loader/: wave.cpp  wave.h
src/util/: linked_list.cpp  linked_list.h  thread_safe_q.h  wmath.cpp  wmath.h
